Added new downtime endpoints
